fix: Fix style of tab headers in BAM
Path wasn't right for the css block that was supposed to adjust their margin.

The extra gap between elements that dialogv2 has is unnecessary.

The was a property that was not used as it was overridden by a foundry property
that was more specific.  It didn't really do anything, so just get of it.

--- a/src/styles/xdy-pf2e-workbench.scss
+++ b/src/styles/xdy-pf2e-workbench.scss
@@ -176,13 +176,14 @@
 
 .bam-dialog {
     container: bam-dialog / inline-size;
+    .standard-form {
+        gap: initial;
+    }
 }
 
-.bam-body > h3 {
+.bam-tabs h3 {
     display: inline-block;
-    margin-right: 8px;
-    margin-top: 0;
-    margin-bottom: 3px;
+    margin: 0 0 0.5rem;
     line-height: 1;
 }
 
@@ -251,7 +252,8 @@
             animation: glow2 alternate infinite 2s;
             z-index: 1;
         }
-        &[data-rank="0"], &[data-rank] {
+        &[data-rank="0"],
+        &[data-rank] {
             background: var(--color-proficiency-untrained);
             color: var(--text-light);
         }
@@ -276,10 +278,6 @@
             margin-right: 5px;
         }
     }
-}
-
-.bam-tabs {
-    align-items: baseline;
 }
 
 @keyframes glow2 {
